created login,reigstration and logout and connected to backend

--- a/package.json
+++ b/package.json
@@ -1,1 +1,8 @@
-{}
+{
+  "scripts": {
+    "dev": "concurrently \"npm --prefix backend start\" \"npm --prefix frontend run dev\""
+  },
+  "devDependencies": {
+    "concurrently": "^9.2.0"
+  }
+}
